# univeristy-pjc

./: CMakeLists.txt
labs/lab_01/: main.cpp  main2.cpp  main3.cpp
labs/lab_02/: main3.cpp  main4.cpp
labs/lab_03/: main5.cpp  zad_1.cpp
